tests/baselines/reference/checkSuperCallBeforeThisAccessing9.errors.txt
tests/cases/compiler/noSuperInJSDocExtends.js(14,9): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/compiler/noSuperInJSDocExtends.js (1 errors) ====
    class Based { }
    /** @extends {Based} */
    class Derived {
        constructor() {
            this;
            this.x = 10;
            var that = this;
        }
    }
    
    /** @extends {Based} */
    class Derived2 {
        constructor() {
            super();
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }